tek3/B5/DOP/bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
spec:
  selector:
    app: poll
  ports:
    - name: http
      protocol: TCP
      targetPort: 80
      port: 80
