tek3/B5/DOP/bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
spec:
  selector:
    app: result
  ports:
    - name: http
      protocol: TCP
      targetPort: 80
      port: 80
