tek3/B5/DOP/bernstein/traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-public
  name: traefik-service
  labels:
    app: traefik
spec:
  type: NodePort
  ports:
    - name: admin
      protocol: TCP
      nodePort: 30042
      port: 8080
      targetPort: 8080
    - name: http
      protocol: TCP
      nodePort: 30021
      port: 80
      targetPort: 80
  selector:
    app: traefik
