tek3/B5/DOP/bernstein/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
  labels:
    app: poll
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: poll.dop.io
      http:
        paths:
          - path: /poll
            pathType: Prefix
            backend:
              service:
                name: poll-service
                port:
                  number: 80
