tek3/B5/DOP/bernstein/result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: default
  labels:
    app: result
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: result.dop.io
      http:
        paths:
          - path: /resultpath
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
